<resources>
    <string name="app_name">Alege calitatea!</string>
    <string name="Email">Email</string>
    <string name="Login">Autentificare</string>
    <string name="Register">Inregistrare</string>
    <string name="App">Incearca aplicatia!</string>
    <string name="Welcome">Bine ai venit!</string>
    <string name="Username">Utilizator</string>
    <string name="Password">Introdu o parola cu minim 6 caractere</string>
    <string name="Password2">Reintrodu parola</string>
    <string name="confidential"></string>
    <string name="Send">Trimite</string>
    <string name="forgotPass"></string>
    <string name="PasswordLogin">Parola</string>
    <string name="btnProfile">Profil</string>
    <string name="btnSearchProduct">Cauta produs</string>
    <string name="btnSearchIngredient">Cauta ingredient</string>
    <string name="btnTryOcr">Incearca tehnologia OCR</string>
    <string name="btnAbout">Despre</string>
    <string name="btnLogout">Iesire</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_start">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login2">Sign in</string>
    <string name="search_via">Cauta dupa: </string>
    <string name="name">nume</string>
    <string name="number">rating</string>
    <string name="rating">rating</string>
    <string name="firstLetter">prima litera</string>
    <string name="filter_by">Filtreaza dupa</string>
    <string name="contains">contine</string>
    <string name="starts_with">incepe cu</string>
    <string name="enter_text_to_search">Introdu text pentru cautare</string>
    <string name="Save_analysis">Salveaza analiza</string>
    <string name="productFunction">Functie</string>
    <string name="productDescription">Descriere</string>
    <string name="productBrand">Brand</string>
    <string name="Category">Categorie</string>
    <string name="OK">ok</string>
    <string name="average">mediu</string>
    <string name="best">foarte bun</string>
    <string name="good">bun</string>
    <string name="poor">slab</string>
    <string name="Function">functie</string>
    <string name="Salvare">salvare</string>
    <string name="Editare" />
    <string name="btnEditare">Modificare</string>
    <string name="btnSalvare">Salvare</string>
    <string name="menu_edit">modificare</string>
    <string name="menu_delete">stergere</string>
    <string name="refresh">refresh</string>
    <string name="choose">alege</string>
    <string name="text">text</string>
    <string name="category">categorie</string>
    <string name="sort">sortare</string>
    <string name="enter_text">Cauta produs dupa functie, descriere, marca</string>
    <string name="asc">cele mai recente</string>
    <string name="desc">cele mai vechi</string>
    <string name="Categorie">Categorie: </string>
    <string name="Functie">Functie: </string>
    <string name="Descriere">Descriere:</string>
    <string name="Brand">Marca:</string>
    <string name="description">Pentru a accesa toate functionalitatile aplicatiei este necesara autentificarea.</string>
    <string name="ocr">Realizeaza o analiza asupra produselor de ingrijire personala utilizand tehnologia de recunoastere optica a caracterelor!</string>
    <string name="Incearca">Incearca OCR</string>
    <string name="Inregistrare">Creeaza un cont pentu a accesa toate serviciile oferite!</string>
    <string name="welcome">Bine ai venit!</string>
    <string name="myanalyses_text">    Acestea sunt analizele realizate si salvate de tine. Ai posibilitatea sa le vizualizezi, modifici sau stergi.</string>
    <string name="tvIndicatii">Captureaza o fotografie sau incarca una din galerie!</string>
    <string name="cautaPod">Cauta o analiza realizata de alti utilizatori!</string>
    <string name="cautaIng">Cauta manual ingredientele</string>
    <string name="incearcaOcr">Analizeaza un produs utilizand tehnologia de recunoastere optica a caracterelor</string>
    <string name="despre">Afla mai multe informatii despre aplicatie!</string>
    <string name="Profil">Profil</string>
    <string name="Data">Data: </string>
    <string name="Ingrediente">Lista de ingrediente:</string>
    <string name="Add_ing">Adauga un ingredient</string>
    <string name="Adauga">Adauga</string>
    <string name="Cancel">Renunta</string>
    <string name="Informatii">Informatii cont</string>
    <string name="Remove_ing">Sterge ingrediente</string>
    <string name="title_activity_scrolling">Informatii utile</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>
