<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/search_via_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/up_dropdown"
        android:padding="5dp"
        android:text="@string/search_via"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <!--  Search Via Radio Group  -->
    <RadioGroup
        android:id="@+id/search_via_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        >

        <RadioButton
            android:id="@+id/name_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rating_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/rating"
            android:textColor="@android:color/black"
            android:textSize="12sp" />


    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/filter_by_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/up_dropdown"
        android:padding="5dp"
        android:text="@string/filter_by"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <!--  Filter By Radio Group  -->
    <RadioGroup
        android:id="@+id/filter_name_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/query_contains_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/contains"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/query_starts_With_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/starts_with"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </RadioGroup>


    <RadioGroup
        android:id="@+id/filter_rating_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/rb_rating_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/average"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rb_rating_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/best"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
        <RadioButton
            android:id="@+id/rb_rating_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/good"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rb_rating_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/poor"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </RadioGroup>


    <!--  EditText for User Input -->
    <EditText
        android:id="@+id/search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/search_bg"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/enter_text_to_search"
        android:maxLines="1"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="12sp" />



</LinearLayout>