<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <AutoCompleteTextView
        android:id="@+id/AutoCompleteTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/search_bg"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/enter_text_to_search"
        android:maxLines="1"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="12sp"
        android:popupTheme="@color/colorPrimary"

        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:text="@string/Adauga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAdaugaIngredientul"
            android:textColor="#fff"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:background="@color/colorPrimary"
            />
        <Button
            android:text="@string/Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRenunta"
            android:textColor="#fff"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:background="@color/colorPrimary"
            />

    </LinearLayout>
</LinearLayout>